--- a/app/views/posts/_message_form.html.erb
+++ b/app/views/posts/_message_form.html.erb
@@ -1,5 +1,8 @@
+<% if logged_in? %>
+
 	<% form_tag(:controller => "posts", :action => "create", :remote => true) do %>
 	<%= label_tag(:message, "what are you doing?" ) %> <br />
 	<%= text_area_tag(:message, nil, :size => "44x6") %> <br />
 	<%= submit_tag("Update") %>
+	<% end %>
 <% end %>
